initial documentation stub for client transfers between groups

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -575,6 +575,14 @@
 								<td></td>
 								<td></td>
 							</tr>
+							<tr>
+								<td></td>
+								<td>groups/{groupId}?command=transferClients</td>
+								<td><a href="#groups_transfer_clients">Transfer Clients</a></td>
+								<td></td>
+								<td></td>
+								<td></td>
+							</tr>
 
 						</table>
 					</div>
@@ -3782,6 +3790,118 @@ Request Body:
 	        </code>
 	    </div>
 	</div>
+
+	<a id="groups_associate_clients" name="groups_associate_clients" class="old-syle-anchor">&nbsp;</a>
+	<div class="method-section">
+	    <div class="method-description">
+	        <h2>Associate Clients</h2>
+	        <p>This API allows to associate existing clients to a group.</p>
+	        <p>The clients are listed from the office to which the group is associated.</p>
+	        <p>If client(s) is already associated with group then API will result in an error.</p>
+	    </div>
+
+	    <div class="method-example">
+	        <code class="method-declaration">POST https://Domain Name/api/v1/groups/{groupId}?command=associateClients</code>
+	        <code class="method-request">POST groups/1?command=associateClients
+Content-Type: application/json
+Request Body:
+{
+  "clientMembers":[1,2]
+}
+			</code>
+	        <code class="method-response">
+{
+  "officeId": 1,
+  "groupId": 1,
+  "resourceId": 1,
+  "clientMembers": [1,2]
+}
+	        </code>
+	    </div>
+	</div>
+			<a id="groups_transfer_clients" name="groups_transfer_clients" class="old-syle-anchor">&nbsp;</a>
+			<div class="method-section">
+			    <div class="method-description">
+			        <h2>Transfer Clients across groups</h2>
+			        <p>This API allows to transfer clients from one group to another</p>
+			        <table class=matrixHeading>
+						<tr class="matrixHeadingBG">
+							<td><div class="mifosXHeading2">Field Descriptions</div></td>
+						</tr>
+						<tr class=alt>
+							<td>destinationGroupId</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>The identifier of the group to which the clients are to be transferred.</td>
+						</tr>
+						<tr class=alt>
+							<td>clients</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>Identifiers of all clients who need to be transferred
+							</td>
+						</tr>
+						<tr class=alt>
+							<td>inheritDestinationGroupLoanOfficer</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>Flag specifies if the transferred clients (and all their active loans)
+							should be linked to the assigned loan officer for the group
+							</td>
+						</tr>
+						<tr class=alt>
+							<td>transferActiveLoans</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>Flag specifies if transfers should proceed when active loans are encountered.
+							If set to true, the schedules of the actives loans are updated to match that meeting schedule
+							of the destination Group
+							</td>
+						</tr>
+					</table>
+					<br/>
+			        <table class=matrixHeading>
+						<tr class="matrixHeadingBG">
+							<td><div class="mifosXHeading2">Mandatory Fields</div></td>
+						</tr>
+						<tr class=alt>
+							<td>destinationGroupId, clients</td>
+						</tr>
+					</table>
+					<br/>
+					<table class=matrixHeading>
+						<tr class="matrixHeadingBG">
+							<td><div class="mifosXHeading2">Optional Fields</div></td>
+						</tr>
+						<tr class=alt>
+							<td>inheritDestinationGroupLoanOfficer (defaults to true), transferActiveLoans (defaults to true)</td>
+						</tr>
+					</table>
+
+			       
+			    </div>
+
+
+			    <div class="method-example">
+
+			        <code class="method-declaration">POST https://Domain Name/api/v1/groups/{groupId}?command=transferClients</code>
+			        <code class="method-request">POST groups/1?command=transferClients
+Content-Type: application/json
+Request Body:
+{
+  destinationGroupId:2,
+  clients:[{id:1}]
+}
+					</code>
+	        		<code class="method-response">
+{
+   "resourceId": 1
+}
+
+
+			  		</code>
+			    </div>
+			</div>
 			<a id="groups_retrieve" name="groups_retrieve" class="old-syle-anchor">&nbsp;</a>
 			<div class="method-section">
 				<div class="method-description">
