--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -209,6 +209,14 @@
 							</tr>
 							<tr class="alt">
 								<td></td>
+								<td>clients/{clientId}?command=transfer</td>
+								<td><a href="#clients_transfer">Transfer Client</a></td>
+								<td></td>
+								<td></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td></td>
 								<td>clients/{clientId}/accounts</td>
 								<td></td>
 								<td><a href="#clients_loansummary">Retrieve client accounts overview</a></td>
@@ -2128,7 +2136,33 @@ Request Body:
 }
 	        </code>
 	    </div>
-	</div>	
+	</div>
+
+	<a id="clients_transfer" name="clients_transfer" class="old-syle-anchor">&nbsp;</a>
+	<div class="method-section">
+	    <div class="method-description">
+	        <h4>Transfer a Client</h4>
+	        <p>Allows you to transfer a <i>Client</i> between <i>Offices</i>.</p>
+	    </div>
+		<div class="method-example">
+	        <code class="method-declaration">POST https://Domain Name/api/v1/clients/{clientId}?command=transfer</code>
+	        <code class="method-request">POST clients/1?command=transfer
+Content-Type: application/json
+Request Body:
+{
+  destinationOfficeId:1
+}				
+			</code>
+	        <code class="method-response">
+{
+   "clientId": 2,
+   "resourceId": 2
+}
+
+
+	        </code>
+	    </div>
+	</div>		
 			<a id="clients_retrieve" name="clients_retrieve" class="old-syle-anchor">&nbsp;</a>
 			<div class="method-section">
 				<div class="method-description">
@@ -18275,6 +18309,14 @@ GET https://DomainName/api/v1/search?query=000000111
 					<td>clients/{clientId}/accounts</td>
 					<td></td>
 					<td><a href="#clients_loansummary">Retrieve client accounts overview</a></td>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td>clients/{clientId}?command=transfer</td>
+					<td><a href="#clients_transfer">Transfer Client</a></td>
+					<td></td>
 					<td></td>
 					<td></td>
 				</tr>
